--- a/07-08-user-profile/before/index.html
+++ b/07-08-user-profile/before/index.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>User Profile</title>
-</head>
-<body>
-  <header>
-    <h1>Kyle Cook</h1>
-  </header>
-  <main>
-    <section>
-      <h2>Hobbies</h2>
-      <ul>
-        <li>Weight Lifting</li>
-        <li>Bowling</li>
-        <li>Music</li>
-      </ul>
-    </section>
-    <section>
-      <h2>Favorite Bands</h2>
-      <ol>
-        <li>Seventh Wonder</li>
-        <li>Ne Obliviscaris</li>
-        <li>Be'lakor</li>
-        <li>Opeth</li>
-        <li>Katy Perry</li>
-      </ol>
-    </section>
-    <section>
-      <h2>Favorite Languages</h2>
-      <ol>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>Ruby</li>
-      </ol>
-    </section>
-  </main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <title>User Profile</title>
+  </head>
+  <body>
+    <header>
+      <h1 class="name">Kyle Cook</h1>
+    </header>
+    <main>
+      <section class="hobbies">
+        <h2 class="title">Hobbies</h2>
+        <ul>
+          <li class="first">Weight Lifting</li>
+          <li>Bowling</li>
+          <li>Music</li>
+        </ul>
+      </section>
+      <section class="bands">
+        <h2 class="title">Favorite Bands</h2>
+        <ol>
+          <li class="first">Seventh Wonder</li>
+          <li>Ne Obliviscaris</li>
+          <li>Be'lakor</li>
+          <li>Opeth</li>
+          <li class="no">Katy Perry</li>
+        </ol>
+      </section>
+      <section class="languages">
+        <h2 class="title">Favorite Languages</h2>
+        <ol>
+          <li class="first">CSS</li>
+          <li>JavaScript</li>
+          <li>Ruby</li>
+        </ol>
+      </section>
+    </main>
+  </body>
 </html>
