--- a/15-16-input-component-library/before/index.html
+++ b/15-16-input-component-library/before/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Input Library</title>
-</head>
-<body>
-  <input type="text" value="Default">
-  <input type="text" value="Success">
-  <input type="text" value="Error">
-  <input type="text" value="Large">
-  <input type="text" value="Small">
-  <input type="text" value="Disabled" disabled>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Input Library</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <input type="text" value="Default" class="input" />
+    <input type="text" value="Success" class="input input-success" />
+    <input type="text" value="Error" class="input input-error" />
+    <input type="text" value="Large" class="input input-large" />
+    <input type="text" value="Small" class="input input-small" />
+    <input type="text" value="Disabled" class="input input-disabled" disabled />
+  </body>
 </html>
